--- a/src/App.css
+++ b/src/App.css
@@ -9,7 +9,7 @@ body {
 }
 
 .timer {
-  width: 100px;
+  width: 200px;
   height: 50px;
   font-size: 50px;
   color: white;
@@ -20,7 +20,8 @@ body {
   text-align: center;
 }
 
-.start {
+.start,
+.stop {
   width: 150px;
   height: 50px;
   position: fixed;
