--- a/src/App.css
+++ b/src/App.css
@@ -45,8 +45,8 @@ body {
   left: 50%;
   transform: translate(-50%, -50%);
   display: grid;
-  grid-template-columns: repeat(3, auto);
-  grid-template-rows: repeat(3, auto);
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(3, 1fr);
   -moz-column-gap: 5px;
        column-gap: 5px;
   row-gap: 5px;
@@ -64,6 +64,17 @@ body {
   color: white;
   font-size: 70px;
   cursor: pointer;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
+}
+
+.blank-tile {
+  width: 100%;
+  height: 100%;
+  border: solid 5px transparent;
+  background-color: white;
 }
 
 .hidden {
@@ -86,4 +97,14 @@ body {
   top: 20px;
   right: 20px;
   cursor: pointer;
+}
+
+.rules-dropdown {
+  width: 200px;
+  height: 200px;
+  border: solid 2px white;
+  position: fixed;
+  top: 60px;
+  right: 20px;
+  color: white;
 }/*# sourceMappingURL=App.css.map */
