--- a/src/App.css
+++ b/src/App.css
@@ -202,4 +202,27 @@ body {
   left: 0;
   background-color: rgba(0, 0, 0, 0.5);
   z-index: 5;
+}
+
+.win {
+  width: 350px;
+  height: 100px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: white;
+  border: solid 2px black;
+  color: black;
+  font-size: 30px;
+  font-weight: 900;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
+  z-index: 3;
 }/*# sourceMappingURL=App.css.map */
